마이페이지에서 디테일페이지 삭제 오류 수정 및 manuwrap 마커 추가

--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -133,7 +133,9 @@
             var openInfoWindows = [];
             let allPlaces = [];
 
-            searchPlaces(); 
+            if (!window.location.search.includes("parking_id=")){
+                        searchPlaces(); 
+                    } 
             loadParkingData();
 
             async function loadUserFavorites() {
@@ -173,9 +175,9 @@
                     return false;
                 }
                 }
-                if (window.location.search.includes("parking_id=")){
-                    document.getElementById('parkingDetailWrap').style.display = "block";
-                }
+                const newUrl = window.location.origin + window.location.pathname;
+                window.history.replaceState({}, "", newUrl);
+
                 ps.keywordSearch(keyword, placesSearchCB); 
             }
             
@@ -203,12 +205,7 @@
                     closeAllInfoWindows();
                     document.getElementById('parkingListWrap').style.display = "none";
                     document.getElementById('list-btn').style.display = "block";
-                    if (window.location.search.includes("parking_id=")){
-                        document.getElementById('parkingDetailWrap').style.display = "block";
-                    }
-                    else{
-                        document.getElementById('parkingDetailWrap').style.display = "none";
-                    }
+                    document.getElementById('parkingDetailWrap').style.display = "none";
                     // 🔥 전체 데이터를 수집하여 저장
                     allPlaces = allPlaces.concat(data);
 
@@ -852,6 +849,12 @@
 
                 async function showParkingDetail(parking) { 
                 try {
+                    if (window.location.search.includes("parking_id=")){
+                        document.getElementById('return-btn').style.display = "none"; 
+                    } 
+                    else{
+                        document.getElementById('return-btn').style.display = "block"; 
+                    }
                     var distance = await parkingUserDistance(parking); // 비동기 처리
                     var parkingInfodistance = document.getElementById('parkingInfo-distance');
 
@@ -899,11 +902,16 @@
                     document.getElementById('parkingDetailWrap').style.display = "block";
 
                     deleteBtn.addEventListener("click", function () {
+                        if (window.location.search.includes("parking_id=")){
+                            document.getElementById('list-btn').style.display = "block";
+                            document.getElementById('parkingDetailWrap').style.display = "none";
+                        } 
+                        else{
                             showClosestParkingLots();
                             document.getElementById('list-btn').style.display = "block";
                             document.getElementById('parkingListWrap').style.display = "none"; 
                             document.getElementById('parkingDetailWrap').style.display = "none";
-                        
+                        }
                     }); 
 
                     returnBtn.addEventListener("click", function () {
@@ -1310,37 +1318,49 @@
         </script>
         {% if selected_parking %}
         <script>
-            window.onload = function() {
-                let selectedParking = JSON.parse('{{ selected_parking|escapejs }}');
-                selectedParking = {
-                    'id': selectedParking['id'],
-                    '주차장명': selectedParking['name'],
-                    '위도': parseFloat(selectedParking['latitude']) || 0,  
-                    '경도': parseFloat(selectedParking['longitude']) || 0, 
-                    '주차기본시간': parseFloat(selectedParking['base_time']),
-                    '주차기본요금': parseFloat(selectedParking['base_fee']),
-                    '추가단위시간': parseFloat(selectedParking['extra_time']),
-                    '추가단위요금': parseFloat(selectedParking['extra_fee']),
-                    '요금정보': selectedParking['fee_info'],
-                    '주차장유형': selectedParking['type'],
-                    '장애인전용주차구역보유여부': selectedParking['disabled_parking'],
-                    '소재지지번주소': selectedParking['lot_address'],
-                    '남은자리': isNaN(parseInt(selectedParking['available_spots'])) ? null : parseInt(selectedParking['available_spots']),
-                    '별점평균': parseFloat(selectedParking['average_rating']).toFixed(2),
-                    '전체자리': parseInt(selectedParking['capacity']),
-                    '평일운영시작시각': selectedParking['weekday_start'],
-                    '평일운영종료시각': selectedParking['weekday_end'],
-                    '토요일운영시작시각': selectedParking['saturday_start'],
-                    '토요일운영종료시각': selectedParking['saturday_end'],
-                    '공휴일운영시작시각': selectedParking['holiday_start'],
-                    '공휴일운영종료시각': selectedParking['holiday_end'],
-                    '전화번호': selectedParking['phone']
-                };
-                if (selectedParking) {
-                    showParkingDetail(selectedParking);
-                    map.setCenter(new kakao.maps.LatLng(selectedParking.위도, selectedParking.경도)); // ✅ 해당 주차장 위치로 이동
-                }
+            window.onload = function () {
+            let selectedParking = JSON.parse('{{ selected_parking|escapejs }}');
+            selectedParking = {
+                'id': selectedParking['id'],
+                '주차장명': selectedParking['name'],
+                '위도': parseFloat(selectedParking['latitude']) || 0,  
+                '경도': parseFloat(selectedParking['longitude']) || 0, 
+                '주차기본시간': parseFloat(selectedParking['base_time']),
+                '주차기본요금': parseFloat(selectedParking['base_fee']),
+                '추가단위시간': parseFloat(selectedParking['extra_time']),
+                '추가단위요금': parseFloat(selectedParking['extra_fee']),
+                '요금정보': selectedParking['fee_info'],
+                '주차장유형': selectedParking['type'],
+                '장애인전용주차구역보유여부': selectedParking['disabled_parking'],
+                '소재지지번주소': selectedParking['lot_address'],
+                '남은자리': isNaN(parseInt(selectedParking['available_spots'])) ? null : parseInt(selectedParking['available_spots']),
+                '별점평균': parseFloat(selectedParking['average_rating']).toFixed(2),
+                '전체자리': parseInt(selectedParking['capacity']),
+                '평일운영시작시각': selectedParking['weekday_start'],
+                '평일운영종료시각': selectedParking['weekday_end'],
+                '토요일운영시작시각': selectedParking['saturday_start'],
+                '토요일운영종료시각': selectedParking['saturday_end'],
+                '공휴일운영시작시각': selectedParking['holiday_start'],
+                '공휴일운영종료시각': selectedParking['holiday_end'],
+                '전화번호': selectedParking['phone']
+            };
+
+            if (selectedParking) {
+                document.getElementById('menu_wrap').style.display = "none"; 
+                showParkingDetail(selectedParking);
+                map.setCenter(new kakao.maps.LatLng(selectedParking.위도, selectedParking.경도));
+
+                // 찜한 주차장 데이터를 먼저 가져온 후 마커 추가
+                loadUserFavorites().then(() => {
+                    var parkingLatLng = new kakao.maps.LatLng(selectedParking.위도, selectedParking.경도);
+                    if (favoriteParkingIds.includes(selectedParking.id)) {
+                        addFavoriteMarker(parkingLatLng, 0, selectedParking.주차장명, selectedParking.남은자리, selectedParking);
+                    } else {
+                        addDefaultMarker(parkingLatLng, 0, selectedParking.주차장명, selectedParking.남은자리, selectedParking);
+                    }
+                });
             }
+        };
         </script>
     {% endif %}    
         {% endblock %}
