[fix]: introduce.html, aboutus.html 소개문구및 이메일, 깃주소 수정

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,7 +5,7 @@
     <div class="aboutus-container">
         <div class="aboutus_container">
             <h2>MEMBERS</h2>
-            <div class="photo">우리 사진 찌거요</div>
+            <!-- <div class="photo">우리 사진 찌거요</div> 사진찍으면 추가 -->
             <div>
                 <ul class="mem">
                     <div class="mem_img">
@@ -13,8 +13,8 @@
                     </div>
                     <p>정원준(PM)</p>
                         <li>기획, 백엔드</li>
-                        <li>email: dietken1@naver.com</li>
-                        <li>github: </li>
+                        <li>Email : dietken1@ajou.ac.kr</li>
+                        <li>Github : dietken1</li>
                         <li>지성 있는 사람들을 이끄는 사람<li>
                 </ul>
                 <ul class="mem">
@@ -23,8 +23,8 @@
                     </div>
                     <p>김현진</p>
                         <li>백엔드</li>
-                        <li>khj32201270@dankook.ac.kr</li>
-                        <li>github: </li>
+                        <li>Email : khj32201270@dankook.ac.kr</li>
+                        <li>Github: blueoxygens</li>
                         <li>나는 감자<li>
                 </ul>
                 <ul class="mem">
@@ -33,8 +33,8 @@
                     </div>
                     <p>임유지</p>
                         <li>프론트엔드, 디자인</li>
-                        <li>limyuji01@naver.com</li>
-                        <li>github: </li>
+                        <li>Email : limyuji01@naver.com</li>
+                        <li>Github : lim-yuji</li>
                         <li>나는 고구마가 좋아<li>
                 </ul>
                 <ul class="mem">
@@ -43,9 +43,9 @@
                     </div>
                     <p>김태린</p>
                         <li>백엔드</li>
-                        <li>redgreenyell@naver.com</li>
-                        <li>github: </li>
-                        <li><li>
+                        <li>Email : redgreenyell@naver.com</li>
+                        <li>Github : ttaerrin</li>
+                        <li>(자기소개 한줄 부탁드립니다.)<li>
                 </ul>
                 <ul class="mem">
                     <div class="mem_img">
@@ -53,9 +53,9 @@
                     </div>
                     <p>박태희</p>
                         <li>프론트엔드</li>
-                        <li>suk05553@naver.com</li>
-                        <li>github: </li>
-                        <li><li>
+                        <li>Email : suk05553@naver.com</li>
+                        <li>Github : qkrxogmla</li>
+                        <li>(자기소개 한줄 부탁드립니다.)<li>
                 </ul>
             </div>
 
