--- a/templates/qanda.html
+++ b/templates/qanda.html
@@ -6,12 +6,12 @@
             <div class="FQA">
                 <h2>FAQ</h2>
                 <div class="qanda_title">
-                    <h3>Q. 지성 Park 서비스는 어떤 서비스인가요?</h3>
-                    <p>A. 지성 Park 서비스는 전국 운전자들의 주차 스트레스를 해소함과 동시에 주차 문제로 발생하는 불법 주정차 등의 사회적인 문제를 해결하기 위해서 만들어진 서비스입니다.</p>
+                    <h3>Q. 어떤 서비스인가요?</h3>
+                    <p>A. 주차장 실시간 정보를 제공하여 전국 운전자들의 주차 스트레스를 해소함과 동시에 불법 주정차 등의 사회적인 문제를 해결하기 위한 서비스입니다.</p>
                 </div>
                 <div class="qanda_title">
-                    <h3>Q. 실시간 데이터를 제공하지 않는 지역이 있나요?</h3>
-                    <p>A. 현재 실시간 데이터를 제공하지 않는 지역이 존재하여 일부 지역을 대상으로만 실시간 서비스를 제공중입니다. 앞으로 더 많은 지역에 해당 추가할 예정입니다.</p>
+                    <h3>Q. 남은 자리가 뜨지 않는 주차장이 있는데, 왜 그렇나요? </h3>
+                    <p>A. 현재 서울의 시영주차장만을 대상으로 실시간 서비스를 제공중입니다. 앞으로 더 많은 지역의 데이터를 추가할 예정입니다.</p>
                 </div>
             </div>
             <div class="contact">
