--- a/templates/introduce.html
+++ b/templates/introduce.html
@@ -4,8 +4,8 @@
     <div class="introduce-container">
         <div class="introduce_container">
             <h1>서비스 소개</h1>
-            <p>지성 Park 서비스는 전국 운전자들의 주차 스트레스를 해소함과 동시에 주차 문제로 발생하는 불법 주정차 등의 사회적인 문제를 해결하기 위해서 만들어진 서비스입니다.</p>
-            <p>현재 실시간 데이터를 제공하지 않는 지역이 존재하여 일부 지역을 대상으로만 실시간 서비스를 제공중입니다. 앞으로 더 많은 지역에 해당 추가할 예정입니다.</p>
+            <p>지성 Park 서비스는 전국 운전자들의 주차 스트레스를 해소함과 동시에 불법 주정차와 같은 사회적인 문제를 해결하기 위해서 만들어진 서비스입니다.</p>
+            <p>현재 시범적으로 서울시 내 시영주차장만을 대상으로 실시간 서비스를 제공중입니다. 앞으로 더 많은 지역에 해당 추가할 예정입니다.</p>
             <div class="footer-bottom">
                 <a href="https://github.com/pirogramming-project/JisungPark.git"><i class="ri-github-fill"></i></a>
                 <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
