--- a/templates/guidemap.html
+++ b/templates/guidemap.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <div class="guidemap-container">
         <div class="guidemap_container">
             <h2>Guide Map</h2>
             <div class="guidemap">
-                가이드맵 이미지는 프로젝트 다 구현된 다음에 캡처해서 넣는게 나을듯??...
+                <img src="{% static 'img/guidemap.png' %}">
             </div>
         </div>
     </div>
