--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             </div>
             <div class="header-nav">
                 {% if user.is_authenticated %}
-                    <a  class="gotomypage" href="{% url 'demos:mypage' %}">({{ user.username }})님</a>
+                    <a  id="gotomypage" href="{% url 'demos:mypage' %}">({{ user.username }})님</a>
                     <a href="{% url 'account_logout' %}">Logout</a>
                 {% else %}
                     <a href="{% url 'account_login' %}">Signin</a>
