--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -44,17 +44,17 @@
                         <li>백엔드</li>
                         <li>Email : redgreenyell@naver.com</li>
                         <li>Github : ttaerrin</li>
-                        <li>(자기소개 한줄 부탁드립니다.)<li>
+                        <li>지성공원이 좋아요<li>
                 </ul>
                 <ul class="mem">
                     <div class="mem_img">
                         <img src="{% static 'img/pth.png' %}" alt="kakao Login">
                     </div>
                     <p>박태희</p>
-                        <li>프론트엔드</li>
+                        <li>프론트엔드, 디자인</li>
                         <li>Email : suk05553@naver.com</li>
                         <li>Github : qkrxogmla</li>
-                        <li>(자기소개 한줄 부탁드립니다.)<li>
+                        <li>지성있는 사람1<li>
                 </ul>
             </div>
 
